2010-12-25  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #11600: [All] tab in ws-module should not have action-buttons

2010-12-22  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #11568: Remove "Enable comparison view" switch
	* Fixed bug #11479: Label of publish action is confusing

2010-12-22  Steffen Gebert <steffen@steffen-gebert.de>

	* Added feature #10642: Design of workspace preview/comparison view (Thanks to Lars Zimmermann)

2010-12-21  Sonja Scholz <ss@cabag.ch>

	* Fixed bug #11480: Add warning when choosing mass actions

2010-12-21  Tolleiv Nietsch <typo3@tolleiv.de>

	* Followup-to #9819: Workspace preview window - browser compatibility fixed

2010-12-20  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #10693: Save and view command previews wrong page record
	* Fixed bug #11532: Generate Workspace Preview Link not working
	* Fixed bug #11605: Do you really want to swap?? - one question mark is enough
	* Fixed bug #11531 Check if email is set before trying to send an email
	* Fixed bug #11141: switching with the tabs in the workspace module should also switch to the related workspace

2010-12-19  Marco Bresch <marco.bresch@starfinanz.de>

	* Fixed bug #11142: The 'All' tab throws Exception 'No such workspace defined'

2010-12-19  Sonja Scholz <ss@cabag.ch>

	* Cleanup: #11153: Determine whether Tx_Workspaces_Service_Stages::encodeStageUid and resolveStageUid are required

2010-12-19  Tolleiv Nietsch <typo3@tolleiv.de>

	* Followup-to #9819: Workspace preview window - "live" and "workspace" buttons are clickable now

2010-12-18  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #11318: workspaces task miss title

2010-12-17  Tolleiv Nietsch <typo3@tolleiv.de>

	* Followup-to #9819: Workspace preview window - empty preview.css included in order to support the skin team

2010-12-14  Tolleiv Nietsch <typo3@tolleiv.de>

	* Fixed bug #9819: Workspace preview window

2010-12-05  Steffen Gebert  <steffen@steffen-gebert.de>
